04-demo/template/05-ingress/adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer-deployment
spec:
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - name: adminer
        image: adminer:4.8.1
---
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
spec:
  selector:
    app: adminer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
